Kiosk salesman is weather-sensible

--- a/weather-forecast/src/main/resources/application.conf
+++ b/weather-forecast/src/main/resources/application.conf
@@ -7,7 +7,10 @@ akka {
     deployment {
       /weather-broadcaster/weather-sensible {
         router = broadcast-group
-        routees.paths = ["akka.tcp://employees@127.0.0.1:2552/user/rollercoaster-gatekeeper"]
+        routees.paths = [
+          "akka.tcp://employees@127.0.0.1:2552/user/rollercoaster-gatekeeper"
+          "akka.tcp://employees@127.0.0.1:2552/user/kiosk-salesman"
+        ]
       }
     }
     debug {
